fix: zones shifting

--- a/app/client/src/layoutSystems/anvil/common/styles.module.css
+++ b/app/client/src/layoutSystems/anvil/common/styles.module.css
@@ -7,44 +7,31 @@
 .anvilWidgetWrapper {
   /** If a section or zone have elevation, then add padding */
   [data-elevation="true"][elevation="1"],
-  [data-elevation="true"][elevation="2"] {
+  [data-elevation="true"][elevation="2"],
+  [elevation="1"]:has([data-elevation="true"]) [data-elevation="false"] {
     padding-block: var(--outer-spacing-3);
     padding-inline: var(--outer-spacing-3);
-  }
-
-  /** Add padding(also border) for zones without elevation if at least one zone has an elevation inside a section */
-  [elevation="1"]:has([data-elevation="true"]) [data-elevation="false"] {
-    padding-block: calc(var(--outer-spacing-3) + var(--border-width-1));
-    padding-inline: calc(var(--outer-spacing-3) + var(--border-width-1));
   }
 
   [data-elevation="false"][elevation="2"] {
     min-height: var(--sizing-8);
   }
 
-  /** If the elevation is enabled, then set the minimum height of the zone with paddings */
+  /**
+    1. Styles for the section if elevation is enabled only for section
+    2. Styles for the zone if elevation is enabled
+  */
+  [data-elevation="true"][elevation="1"]:has([data-elevation="false"]),
   [data-elevation="true"][elevation="2"] {
-    min-height: calc(var(--sizing-8) + var(--outer-spacing-3) * 2);
-  }
-
-  /** Styles for the section if elevation is enabled only for section */
-  [data-elevation="true"][elevation="1"]:has([data-elevation="false"]) {
     background-color: var(--color-bg-elevation-2);
     border-radius: var(--border-radius-elevation-2);
-    border: var(--border-width-1) solid var(--color-bd-elevation-2);
+    outline: var(--border-width-1) solid var(--color-bd-elevation-2);
   }
 
   /** Styles for the section if elevation is enabled for both section and zone */
   [data-elevation="true"][elevation="1"]:has([data-elevation="true"]) {
     background-color: var(--color-bg-elevation-1);
     border-radius: var(--border-radius-elevation-1);
-    border: var(--border-width-1) solid var(--color-bd-elevation-1);
-  }
-
-  /**Styles for the zone if elevation is enabled */
-  [data-elevation="true"][elevation="2"] {
-    background-color: var(--color-bg-elevation-2);
-    border-radius: var(--border-radius-elevation-2);
-    border: var(--border-width-1) solid var(--color-bd-elevation-2);
+    outline: var(--border-width-1) solid var(--color-bd-elevation-1);
   }
 }
